k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksbsample-deployment
  labels:
    app: ksbsample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ksbsample
  template:
    metadata:
      labels:
        app: ksbsample
    spec:
      containers:
      - name: ksbsample
        image: tranchida/ksbsample:1.0.0
        imagePullPolicy: "Always"
        #image: busybox
        #command:
        #  - "sh"
        #  - "-c"
        #  - "while true; do sleep 6000; done"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /q/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - name: config-volume
          mountPath: /conf/environment.properties
          subPath: environment.properties
        - name: secret-volume
          mountPath: /conf/credentials.properties
          subPath: credentials.properties
        - name: data-volume
          mountPath: /data
        resources:
          requests:
            cpu: "1"
            memory: 400Mi
          limits:
            cpu: "1"
            memory: 400Mi
      volumes:
      - name: config-volume
        configMap:
          # Provide the name of the ConfigMap containing the files you want
          # to add to the container
          name: ksbsample-environment
      - name: secret-volume
        secret:
          secretName: ksbsample-credentials
      - name: data-volume
        persistentVolumeClaim:
          claimName: ksbsample-pvc
