k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ksbsample-service
  annotations:
    metallb.universe.tf/address-pool: custom-addresspool
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.1
  selector:
    app: ksbsample
  ports:
  - port: 8080
    targetPort: 8080
