k8s/base/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ksbsample-ingress
  labels:
    name: ksbsample-ingress
spec:
  rules:
  - host: ksbsample.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ksbsample-service
            port: 
              number: 8080
