k8s/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ksbroute
spec:
  to:
    kind: Service
    name: ksbsample-service
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
